@@ -4,6 +4,10 @@ Changes listed by release, then alphabetically.
 
 CruiseControl Release Notes - Latest CVS
 
+cruisecontrol.bat/.sh
+----------------------
+* Introduce CC_OPTS to easily pass arguments to VM when starting CC. Patch by Arent-Jan Banck
+
 P4:
 ----------------------
 * Fix problem where test would fail if Perforce was on the path. Patch by Arent-Jan Banck
